-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1
-
Component/s: Encryption, Storage Engine - InnoDB, Storage Engine - XtraDB
-
Labels:
-
Sprint:10.2.6-2, 10.2.6-3, 10.1.23
bpage could be referenced after it was already freed from LRU. We should remove corrupted or still encrypted pages from LRU as soon as we detect the problem and after that point page should not be anymore referenced.
- causes
-
MDEV-12627 innodb.innodb_bug14147491 does not do proper cleanup
-
- Closed
-
-
MDEV-12628 innodb.innodb_bug14147491 sporadically fails in buildbot due to wrong error number
-
- Closed
-
- includes
-
MDEV-11420 encryption.innodb_encryption-page-compression failed in buildbot
-
- Closed
-
-
MDEV-11759 Encryption code in MariaDB 10.1/10.2 causes compatibility problems
-
- Closed
-
-
MDEV-12419 IMPORT should not look up tablespace in PageConverter::validate()
-
- Closed
-
- relates to
-
MDEV-4777 innodb_force_recovery is more efficient with InnoDB plugin than XtraDB on certain cases
-
- Open
-
-
MDEV-12602 InnoDB: Failing assertion: space->n_pending_ops == 0
-
- Closed
-
-
MDEV-12699 Improve crash recovery of corrupted data pages
-
- Closed
-
-
MDEV-12750 Fix crash recovery of key rotation
-
- Closed
-
-
MDEV-13542 Crashing on a corrupted page is unhelpful
-
- Confirmed
-
-
MDEV-9962 encryption.innodb_encryption_filekeys stalled waiting for key encryption threads to decrypt all required spaces
-
- Closed
-
-
MDEV-11929 During delete: InnoDB: Assertion failure in thread 139757855127296 in file buf0buf.cc line 4803
-
- Closed
-
-
MDEV-12235 sys_vars.log_slow_admin_statements_func failed in buildbot (server crashed)
-
- Open
-
-
MDEV-12396 MariaDB Server SEGV crash when importing tablespace for a large table (4GB)
-
- Closed
-
-
MDEV-13893 encryption.innodb-redo-badkey failed in buildbot with page cannot be decrypted
-
- Closed
-