MDEV-12253 post-merge fix: Use accessors for dict_table_t::file_unreadable