storage/innobase/dict/dict0load.cc
@@ -2430,7 +2430,7 @@ dict_load_indexes(
 			dict_mem_index_free(index);
 			goto func_exit;
 		} else if (index->page == FIL_NULL
-			   && !table->file_unreadable
+			   && table->is_readable()
 			   && (!(index->type & DICT_FTS))) {
 
 			ib::error() << "Trying to load index " << index->name
@@ -2886,7 +2886,7 @@ err_exit:
 	were not allowed while the table is being locked by a transaction. */
 	dict_err_ignore_t index_load_err =
 		!(ignore_err & DICT_ERR_IGNORE_RECOVER_LOCK)
-		&& table->file_unreadable
+		&& !table->is_readable()
 		? DICT_ERR_IGNORE_ALL
 		: ignore_err;
 
@@ -2948,7 +2948,7 @@ err_exit:
 	of the error condition, since the user may want to dump data from the
 	clustered index. However we load the foreign key information only if
 	all indexes were loaded. */
-	if (!cached || table->file_unreadable) {
+	if (!cached || !table->is_readable()) {
 		/* Don't attempt to load the indexes from disk. */
 	} else if (err == DB_SUCCESS) {
 		err = dict_load_foreigns(table->name.m_name, NULL,
@@ -2982,7 +2982,7 @@ err_exit:
 			table = NULL;
 
 		} else if (dict_index_is_corrupted(index)
-			   && !table->file_unreadable) {
+			   && table->is_readable()) {
 
 			/* It is possible we force to load a corrupted
 			clustered index if srv_load_corrupted is set.
@@ -2996,7 +2996,7 @@ func_exit:
 
 	ut_ad(!table
 	      || ignore_err != DICT_ERR_IGNORE_NONE
-	      || table->file_unreadable
+	      || !table->is_readable()
 	      || !table->corrupted);
 
 	if (table && table->fts) {
